--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "puppeteer-hcaptcha",
-  "version": "4.1.4",
-  "description": "A library to solve hcaptcha challenges that are automated within puppeteer and without",
-  "main": "hcaptcha.js",
+  "name": "playwright-hcaptcha",
+  "version": "0.0.1",
+  "description": "A library to solve hcaptcha challenges with playwright",
+  "main": "src/solveCaptcha.ts",
   "bundledDependencies": false,
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.2",
-    "@tensorflow/tfjs-node": "^3.11.0",
-    "ghost-cursor": "https://github.com/aw1875/ghost-cursor.git",
+    "@tensorflow/tfjs-node-gpu": "^3.13.0",
+    "axios": "^0.25.0",
     "jwt-decode": "^3.1.2",
-    "node-fetch": "^2.6.1",
-    "puppeteer": "^12.0.1",
-    "puppeteer-extra": "^3.2.3",
-    "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9"
+    "playwright-core": "^1.18.1",
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.1.8"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aw1875/puppeteer-hcaptcha.git"
+    "url": "git+https://github.com/xrip/playwright-hcaptcha.git"
   },
   "keywords": [
+    "playwright",
     "puppeteer",
     "hcaptcha",
     "solver",
     "hcaptcha solver",
     "puppeteer hcaptcha",
     "hcaptcha-solver",
-    "puppeteerhcaptcha"
+    "puppeteerhcaptcha",
+    "playwrighthcaptcha"
   ],
-  "author": "Adam Wolf",
+  "author": "xrip",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/aw1875/puppeteer-hcaptcha/issues"
+    "url": "https://github.com/xrip/playwright-hcaptcha/issues"
   },
-  "homepage": "https://github.com/aw1875/puppeteer-hcaptcha#readme"
+  "homepage": "https://github.com/xrip/playwright-hcaptcha#readme"
 }
